fix menu visible

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 #menu_list {
-  display: inline-block;
+  display: block;
   z-index: 2;
   position: absolute;
   top: 20px;
@@ -24,19 +24,11 @@ body {
   border-radius: 4px;
   height: 60px;
   line-height: 2em;
+  overflow: hidden;
 }
 
 #menu_list:hover {
   height: initial;
-}
-
-#menu_list>a {
-  visibility: hidden;
-  position: relative;
-}
-
-#menu_list:hover>a {
-  visibility: visible;
 }
 
 #title {
